Made some changes in style.css and index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <title>finsweet</title>
     </head>
     <body>
@@ -17,7 +17,7 @@
         <span class="line"></span>
         <div class="telephone-assistant">
             <div class="telephone-icon">
-                <img src="/images/Assistance Icon.png">
+                <img src="./images/Assistance Icon.png">
             </div>
             <div class="telephone-assistant">
               <h3>road assistance</h4>
@@ -29,7 +29,7 @@
     <div class="left-container">
 <h1>Get your vehicle service done online at one place</h1>
 <button class="myBtn">Book a service</button>
-<img src="images/Icon (1).png">
+<img src="./images/Icon (1).png">
 <p>We are open</p>
 <h5>Monday to Friday 9:00 AM to 10:00 AM</h5>
     </div>
@@ -46,11 +46,11 @@
     <div class="second-rating">
         <h5>4.5/5</h5>
         <h6>Rating</h6>
-        <img src="/images/Star 1.png" class="img1">
-        <img src="/images/Star 1.png" class="img2">
-        <img src="/images/Star 1.png" class="img3">
-        <img src="/images/Star 1.png" class="img4">
-        <img src="/images/Star 5 Yellow.png" class="img5">
+        <img src="./images/Star 1.png" class="img1">
+        <img src="./images/Star 1.png" class="img2">
+        <img src="./images/Star 1.png" class="img3">
+        <img src="./images/Star 1.png" class="img4">
+        <img src="./images/Star 5 Yellow.png" class="img5">
     </div>
 </div>
     </div>
@@ -60,24 +60,24 @@
         <div id="left-box">
             <h2>We are taking car servicing seriously</h2>
             <div class="first-left-box">
-                <img src="images/Icon (2).png">
+                <img src="./images/Icon (2).png">
         <h4>Convenient service</h4>
         <p>Through True Rich Attended does no end it 
             his mother since real had half every him.</p>
     </div>
     <div class="second-left-box">
-        <img src="images/Icon (3).png">
+        <img src="./images/Icon (3).png">
     <h4>Expert mechanics</h4>
 <p>Through True Rich Attended does 
 no end it his mother since real had half every him. </p>
 </div>
 <div class="third-left-box">
-    <img src="images/Icon (4).png">
+    <img src="./images/Icon (4).png">
     <h4>Transparent pricing</h4>
 <p>Through True Rich Attended does 
 no end it his mother since real had half every him.</p>
     
-    <h6>Know more about us</h6><img src="images/Arrow.png" class="arrow">
+    <h6>Know more about us</h6><img src="./images/Arrow.png" class="arrow">
     </div>
     
 
