--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <div class="left-container">
 <h1>Get your vehicle service  done online at one place</h1>
 <button class="myBtn">Book a service</button>
+
 <img src="./images/Icon (1).png">
+
 <p>We are open</p>
 <h5>Monday to Friday 9:00 AM to 10:00 AM</h5>
     </div>
@@ -96,7 +98,7 @@ no end it his mother since real had half every him.</p>
             <input class="input-field" placeholder="Enter your location">
             <input class="input-field" placeholder="Enter your location">
             <input class="input-field" placeholder="Enter your location">
-            <input class="input-field" placeholder="Your phone number">
+            <input class="input-field" id="number" placeholder="Your phone number">
             <button class="myBtn">Get your quote</button>
         </form>
     </div>
@@ -142,8 +144,9 @@ no end it his mother since real had half every him.</p>
 
         <div class="fourth-section">
             <h3>What we Offer</h3>
-            <h2>We offer full service auto repair 
+            <h2>We offer full auto repair service 
                 <p>& maintenance</p></h2>
+                <div class="box-container">
                 <div class="box1">
      <img src="./images/Icon (5).png">
      <p>Diagnostics</p>
@@ -152,7 +155,7 @@ no end it his mother since real had half every him.</p>
 <img src="./images/Icon (6).png">
 <p>Engine Repair</p>
                 </div>
-                <div class="box3">
+            <div class="box3">
 <img src="./images/Icon (7).png">
 <p>Wheel Repair</p>
                 </div>
@@ -168,7 +171,7 @@ no end it his mother since real had half every him.</p>
 <img src="./images/Vector (1).png">
 <p>Batteries</p>
                 </div>
-                <div class="box7">
+         <div class="box7">
 <img src="./images/Icon (10).png">
 <p>Insurance Claim</p>
                 </div>
@@ -176,6 +179,7 @@ no end it his mother since real had half every him.</p>
 <img src="./images/Icon (12).png">
 <p>Custom Service</p>
                 </div>
+            </div>
                 <div class="learn-services">
                 <p>Learn about services</p>
                 <img src="./images/Arrow.png">
