--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@ no end it his mother since real had half every him.</p>
 
         <div class="fourth-section">
             <h3>What we Offer</h3>
-            <h2>We offer full auto repair service 
-                <p>& maintenance</p></h2>
+            <h2>We offer full auto repair service & maintenance</h2>
                 <div class="box-container">
                 <div class="box1">
      <img src="./images/Icon (5).png">
